--- a/src/shticell/jfx/sheet/sheet.fxml
+++ b/src/shticell/jfx/sheet/sheet.fxml
@@ -2,74 +2,57 @@
 
 <?import java.lang.String?>
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.CheckBox?>
-<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Spinner?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="shticell.jfx.sheet.sheetController">
+
+<GridPane fx:id="masterGridPane" hgap="5.0" stylesheets="@single-cell.css" vgap="5.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="shticell.jfx.sheet.SheetControllerImpl">
+   <columnConstraints>
+      <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" prefWidth="100.0" />
+      <ColumnConstraints fillWidth="false" halignment="CENTER" hgrow="NEVER" prefWidth="20.0" />
+      <ColumnConstraints hgrow="NEVER" maxWidth="50.0" minWidth="50.0" prefWidth="50.0" />
+      <ColumnConstraints hgrow="NEVER" maxWidth="50.0" minWidth="50.0" prefWidth="50.0" />
+      <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" prefWidth="100.0" />
+   </columnConstraints>
+   <rowConstraints>
+      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+      <RowConstraints maxHeight="30.0" minHeight="30.0" prefHeight="30.0" vgrow="NEVER" />
+      <RowConstraints maxHeight="30.0" minHeight="30.0" prefHeight="30.0" vgrow="NEVER" />
+      <RowConstraints fillHeight="false" maxHeight="1.7976931348623157E308" minHeight="30.0" prefHeight="30.0" vgrow="ALWAYS" />
+   </rowConstraints>
    <children>
-      <GridPane fx:id="masterGridPane" hgap="5.0" layoutX="145.0" layoutY="79.0" stylesheets="@single-cell.css" vgap="5.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="5.0">
-         <columnConstraints>
-            <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" prefWidth="100.0" />
-            <ColumnConstraints fillWidth="false" halignment="CENTER" hgrow="NEVER" prefWidth="20.0" />
-            <ColumnConstraints hgrow="NEVER" maxWidth="50.0" minWidth="50.0" prefWidth="50.0" />
-            <ColumnConstraints hgrow="NEVER" maxWidth="50.0" minWidth="50.0" prefWidth="50.0" />
-            <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" prefWidth="100.0" />
-         </columnConstraints>
-         <rowConstraints>
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="30.0" minHeight="30.0" prefHeight="30.0" vgrow="NEVER" />
-            <RowConstraints maxHeight="30.0" minHeight="30.0" prefHeight="30.0" vgrow="NEVER" />
-         </rowConstraints>
-         <children>
-            <Label fx:id="cellA1" alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" GridPane.columnIndex="2" GridPane.rowIndex="1">
-               <styleClass>
-                  <String fx:value="single-cell" />
-                  <String fx:value="background-cell" />
-               </styleClass></Label>
-            <Label text="A" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" />
-            <Label text="B" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" />
-            <Label text="1" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            <Label text="2" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-            <Label fx:id="cellB2" alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.rowIndex="2">
-               <styleClass>
-                  <String fx:value="single-cell" />
-                  <String fx:value="background-cell" />
-               </styleClass></Label>
-            <Label fx:id="cellA2" alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" GridPane.columnIndex="2" GridPane.rowIndex="2">
-               <styleClass>
-                  <String fx:value="single-cell" />
-                  <String fx:value="background-cell" />
-               </styleClass>
-            </Label>
-            <Label fx:id="cellB1" alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" GridPane.columnIndex="3" GridPane.rowIndex="1">
-               <styleClass>
-                  <String fx:value="single-cell" />
-                  <String fx:value="background-cell" />
-               </styleClass>
-            </Label>
-         </children>
-         <padding>
-            <Insets top="15.0" />
-         </padding>
-      </GridPane>
-      <HBox alignment="CENTER_LEFT" layoutX="142.0" layoutY="276.0" prefWidth="200.0" spacing="5.0" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0">
-         <children>
-            <ComboBox fx:id="alignmentBox" onAction="#alignmentSelectionListener" prefWidth="80.0" visibleRowCount="3" />
-            <Spinner fx:id="widthPicker" prefWidth="70.0" />
-            <Spinner fx:id="heightPicker" prefWidth="70.0" />
-            <CheckBox fx:id="toggleColorCheckbox" mnemonicParsing="false" onAction="#toggleCellColor" text="color &amp; fill" />
-            <CheckBox fx:id="markCheckbox" mnemonicParsing="false" onAction="#markCellsButtonActionListener" text="mark" />
-            <ComboBox fx:id="selectCellForEditCombobox" prefWidth="80.0" />
-            <TextField fx:id="cellInputContentTextfield" onAction="#inputCellActionListener" prefWidth="80.0" />
-         </children>
-      </HBox>
+      <Label fx:id="cellA1" alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" GridPane.columnIndex="2" GridPane.rowIndex="1">
+         <styleClass>
+            <String fx:value="single-cell" />
+            <String fx:value="background-cell" />
+         </styleClass>
+      </Label>
+      <Label text="A" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" />
+      <Label text="B" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" />
+      <Label text="1" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+      <Label text="2" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+      <Label fx:id="cellB2" alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.rowIndex="2">
+         <styleClass>
+            <String fx:value="single-cell" />
+            <String fx:value="background-cell" />
+         </styleClass>
+      </Label>
+      <Label fx:id="cellA2" alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" GridPane.columnIndex="2" GridPane.rowIndex="2">
+         <styleClass>
+            <String fx:value="single-cell" />
+            <String fx:value="background-cell" />
+         </styleClass>
+      </Label>
+      <Label fx:id="cellB1" alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" GridPane.columnIndex="3" GridPane.rowIndex="1">
+         <styleClass>
+            <String fx:value="single-cell" />
+            <String fx:value="background-cell" />
+         </styleClass>
+      </Label>
    </children>
-</AnchorPane>
+   <padding>
+      <Insets top="15.0" />
+   </padding>
+</GridPane>
